--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,11 @@ body {
     margin: 0%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
+    /* background-color: black; */
+}
 
-  
+#root{
+ padding-left: 10%;
+ padding-right: 10%;
+ margin-top: 10%;
+}  
