--- a/public/index.css
+++ b/public/index.css
@@ -11,7 +11,7 @@ body {
  margin-top: 10%;
 } 
 
-#initialSplashWindow{
+.initialSplashWindow{
     position: absolute;
     top:0%;
     left:0%;
@@ -21,7 +21,7 @@ body {
     overflow: hidden;
 
 }
-#initialWindowText{
+.initialWindowText{
     position: absolute;
     top:50%;
     left:50%;
@@ -33,7 +33,7 @@ body {
     font-size: 3vw;
     overflow: hidden;
 }
-#helperSplashWindow{
+.helperSplashWindow{
     position: absolute;
     top:0%;
     left:0%;
@@ -42,7 +42,11 @@ body {
     background-color: rgb(71, 59, 82);
     transform: translate(0,100%);
 }
-.textspan{
+.textspan1{
+    transform: translateY(100%);
+    display: inline-block;
+}
+.textspan2{
     transform: translateY(100%);
     display: inline-block;
 }
