--- a/public/index.css
+++ b/public/index.css
@@ -2,14 +2,14 @@ body {
     margin: 0%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /* background-color: black; */
+    background-color: black;
 }
 
-#root{
+/* #root{
  padding-left: 10%;
  padding-right: 10%;
  margin-top: 10%;
-} 
+}  */
 
 .initialSplashWindow{
     position: absolute;
